# kakoune-discord

./: Cargo.toml  flake.nix
rc/: discord.kak
src/: main.rs
